overflow and imgs fixes

--- a/2_faq-accordion-card-main/faq-accordion-card-main/style.css
+++ b/2_faq-accordion-card-main/faq-accordion-card-main/style.css
@@ -76,11 +76,12 @@ body {
 }
 
 #illustrationBox {
-  width: 38%;
-  height: 38%;
+  width: 9.9%;
+  height: 17%;
+  display: inline-block;
   position: relative;
-  left: -410px;
-  top: -183px;
+  left: 336px;
+  top: -379px;
   z-index: 3;
 }
 
@@ -89,13 +90,8 @@ body {
   width: 50%;
   padding: 20px;
   overflow: hidden;
-  /* overflow-y: auto; */
+  overflow-y: auto;
 }
-
-/* .accordionLabel,
-accordionContent {
-  /* padding: 14px 20px; 
-} */
 
 .accordionLabel {
   cursor: pointer;
@@ -152,99 +148,3 @@ accordionContent {
 .accordionInput:checked ~ .accordionLabel::after {
   transform: rotate(0.5turn);
 }
-
-/*
-.contentContainer {
-  width: 757px;
-  height: 60vh;
-  background-color: white;
-  overflow: hidden;
-  border-radius: 15px;
-}
-
-.photoContainer {
-  width: 477px;
-  height: 347px;
-  overflow: hidden;
-  /* background-color: yellowgreen; 
-}
-
-.faqContainer {
-  position: relative;
-  top: -340px;
-  right: -360px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  font-size: 12px;
-}
-
-.photoContainer img {
-  max-width: 100%;
-  max-height: 100%;
-}
-
-#dskPattern {
-  position: relative;
-  width: 138%;
-  z-index: 1;
-  left: -72%;
-  top: -60%;
-}
-
-#illustrationPattern {
-  position: absolute;
-  z-index: 3;
-  width: 11.9%;
-  top: 150px;
-  right: 912px;
-}
-
-#illustrationWoman {
-  max-width: 80%;
-  max-height: 90%;
-  position: relative;
-  z-index: 2;
-  top: -636px;
-  left: -70px;
-}
-
-h1 {
-  color: black;
-  position: relative;
-  top: -330px;
-  right: -400px;
-  z-index: 5;
-}
-
-.accordion {
-  background-color: #eee;
-  color: #444;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
-  transition: 0.4s;
-}
-
-/*
-.active,
-.accordion:hover {
-  background-color: #ccc;
-}
-
-.panel {
-  padding: 0 18px;
-  display: none;
-  background-color: white;
-  overflow: hidden;
-}
-
-.panel p {
-  font-size: 12px;
-}
-*/
